--- a/public-danny/styles.css
+++ b/public-danny/styles.css
@@ -47,28 +47,29 @@ a {
     text-decoration: none;
 }
 
-/* .btn-container {
-    display: flex;
-    flex-direction: row;
-    background-color: green;
-    height: 100px;
-} */
-
 .btn-text-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
-.btn-container img {
-    height: 75px;
+.btn img {
+    height: 65px;
+    /* margin-left:auto;
+    margin-right: auto; */
+}
+
+.img-box {
+    display: flex;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: auto;
+    min-width: 75px;
 }
 
 .btn {
     display: flex;
-    flex-direction: column;
-    align-content: center;
     height: 100%;
-    padding: 1.1rem 8rem 1.1rem 1.1rem;
+    padding: 1.1rem 1.1rem 1.1rem 1.1rem;
     border-radius: 1.25rem;
     margin: 0 0 2rem 0;
 }
