--- a/public-danny/styles.css
+++ b/public-danny/styles.css
@@ -138,12 +138,25 @@ a {
     background-color: #FCC699;
 }
 
-.resource-header {
+#resource-box {
+    text-align: center;
+    margin-bottom: 2.2rem;
+}
+
+#resource-box h1 {
     font-size: 2rem;
+}
+
+#resource-box p {
+    font-weight: 200;
 }
 
 .owner-text {
     color: black;
     font-size: 0.9rem;
     font-weight: 500 ;
+}
+
+.resource-header-image {
+    height: 150px;
 }
