added back button to pages

--- a/public-danny/styles.css
+++ b/public-danny/styles.css
@@ -160,3 +160,12 @@ a {
 .resource-header-image {
     height: 150px;
 }
+
+.back-link-box {
+    margin-right: auto;
+    text-align: left;
+}
+
+.back-link-box a {
+    color: white;
+}
