--- a/public-danny/styles.css
+++ b/public-danny/styles.css
@@ -78,20 +78,20 @@ a {
 .btn-text-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
-.btn img {
-    height: 65px;
-    /* margin-left:auto;
-    margin-right: auto; */
+.btn-text-container p {
+    margin-bottom: 0%;
 }
 
 .img-box {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-left: 10px;
     margin-right: auto;
-    min-width: 75px;
+    min-width: 100px;
 }
 
 .img-box img {
@@ -154,7 +154,7 @@ a {
 .owner-text {
     color: black;
     font-size: 0.9rem;
-    font-weight: 500 ;
+    font-weight: bold;
 }
 
 .resource-header-image {
