--- a/public-danny/styles.css
+++ b/public-danny/styles.css
@@ -170,9 +170,9 @@ a {
     color: white;
 }
 
-/***********File button and pop up***************/
+/* File button and pop up */
 
-.file{
+.submit-resource-button {
     position: fixed;
     top:90%;
     left: 80%;
@@ -184,26 +184,39 @@ a {
     background-size: contain;
 }
 
-.rotate{
-    transform: rotate(90deg);
+.inactive-link {
+    pointer-events: none;
+    cursor: pointer;
 }
 
+.rotate-and-hide {
+    transform: rotate(90deg);
+    opacity: 0;
+    transition: transform 1s, opacity 1s;
+}
 
 form{
     visibility: hidden;
-    top:30%;
-    left:10%;
     position:fixed;
+    top: 10rem;
+    left:10%;
     display: flex;
     flex-direction: column;
-    color: #000000;
+    color: white;
     width: 70%;
     margin: auto;
-    background-color:  #8F78D8;
-    border-radius: 20px;
+    background-color:  #343842;
     padding: 15px;
     font-family: "Inter", Arial, Helvetica, sans-serif;
     gap: 5px;
+}
+
+#newRes {
+    border-radius: 13px;
+}
+
+#newRes h2 {
+    text-align: center;
 }
 
 .formShow{
@@ -217,16 +230,38 @@ form{
     opacity: 20%;
 }
 
-form textarea, form input, form button{
-    border-radius: 20px;
-    padding: 5px;
+form textarea, form input, form button {
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+    border-radius: 13px;
+    padding: 0.8rem;
     border: 0px;
+    background-color: #1B1E24;
+    margin-bottom: 0.6rem;
+    color: white;
+    font-size: 16px;
 }
 
-form button{
-    background-color: rgb(69, 169, 136);
+form textarea {
+    height: 50px;
 }
 
-form button:hover{
-    background-color: rgb(48, 117, 94);
+form input {
+    height: 20px;
+}
+
+#form-cancel-button {
+    margin-top: 1.1rem;
+    background-color: #666371;
+}
+
+#form-cancel-button:hover {
+    background-color: #4d4b55;
+}
+
+#form-submit-button {
+    background-color: #8F77D8;
+}
+
+#form-submit-button:hover {
+    background-color: #625291;
 }
