--- a/public-danny/styles.css
+++ b/public-danny/styles.css
@@ -183,6 +183,7 @@ a {
     transition-duration: 1s;
     background-image: url('/assets/images/Plus.png');
     background-size: contain;
+    cursor: pointer;
 }
 
 .inactive-link {
