updated login styling

--- a/public-danny/login.css
+++ b/public-danny/login.css
@@ -18,35 +18,39 @@ nav {
 
 /***********Log in ************/
 
-#login{
-    background-image: url();
-    background-size: contain;
-}
-
 #login main{
     margin-top: 20%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    
-
+    min-width: 270px;
 }
 
 #logInData{
-    width: 70%;
+    display: flex;
+    align-items: center;
+    position:fixed;
+    top: 55%;
+    left:10%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 10px;
+    color: white;
+    width: 70%;
+    min-width: 270px;
+    margin: auto;
     background-color:  #343842;
-    padding: 10px;
     border-radius: 20px;
+    padding: 15px;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+    gap: 5px;
+}
+
+#logInData label {
+    font-size: 12px;
+    margin-top: 0.5rem;
 }
 
 #login input{
-    width: 100%;
     background-color: white;
     border-radius: 20px;
     padding: 5px;
@@ -64,7 +68,8 @@ nav {
 
 
 .logInbtn{
-    margin-top: 5px;
+    margin-top: 1rem;
+    border: none;
 }
 
 .continue{
@@ -86,7 +91,7 @@ nav {
 }
 
 .register{
-    margin-top: 20px;
+    margin-top: 0.5rem;
     border: 0;
 }
 
