--- a/public-danny/login.css
+++ b/public-danny/login.css
@@ -31,7 +31,6 @@ nav {
     align-items: center;
     position:fixed;
     top: 55%;
-    left:10%;
     display: flex;
     flex-direction: column;
     color: white;
@@ -46,7 +45,7 @@ nav {
 }
 
 #logInData input {
-    font-size: 12px;
+    font-size: 14px;
     text-align: center;
 }
 
@@ -72,18 +71,32 @@ nav {
     border: none;
 }
 
-.continue{
-    position: fixed;
+.popUp {
+    display: flex;
+    justify-content: center;
+}
+
+.continue {
     display: flex;
     flex-direction: column;
-    background-color: #bf9aff;
+    background-color: #343842;
     border-radius: 20px;
-    top: 40%;
-    left: 17%;
     align-items: center;
     justify-content: space-evenly;
-    padding: 10px;
-    margin: 10px;
+    width: 270px;
+    height: 75px;
+    position: relative;
+    z-index: 999;
+    padding-bottom: 10px;
+}
+
+.continue h2 {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.continue button {
+    border: none;
 }
 
 .notFound{
@@ -120,6 +133,7 @@ visibility: hidden;
 
 #newUser input{
     width: 95%;
+    border-radius: 8px;
 }
 
 #newUser button{
@@ -127,7 +141,8 @@ visibility: hidden;
     width: 125px;
     color: white;
     font-weight: 200px;
-    border-radius: 20px;
+    border-radius: 8px;
     height: 28px;
-   align-self: center;
+    align-self: center;
+    border: none;
 }
