--- a/public-danny/styles.css
+++ b/public-danny/styles.css
@@ -89,8 +89,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 10px;
-    margin-right: auto;
+    margin-left: auto;
     min-width: 100px;
 }
 
