--- a/server/public/login.css
+++ b/server/public/login.css
@@ -15,11 +15,28 @@ nav {
     padding-right: 2.2rem;
 }
 
+/***********Header************/
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.1rem;
+    box-sizing: border-box;
+    margin-bottom: auto;
+}
+
+header h1 {
+    font-size: 3rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0px;
+}
+
 
 /***********Log in ************/
 
 #login main{
-    margin-top: 20%;
+    margin-top: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,6 +53,7 @@ nav {
     color: white;
     width: 70%;
     min-width: 270px;
+    max-width: 400px;
     margin: auto;
     background-color:  #343842;
     border-radius: 20px;
@@ -88,6 +106,8 @@ nav {
     position: relative;
     z-index: 999;
     padding-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .continue h2 {
