--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -369,109 +369,7 @@ form input {
     background-color: #C89AFF;
 }
 
-/***********Log in ************/
-
-#login{
-    background-image: url();
-    background-size: contain;
-}
-
-#login main{
-    margin-top: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-
-}
-
-#logInData{
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 10px;
-}
-#login input{
-    width: 100%;
-    background-color: white;
-}
-
-#login button{
-    background-color: #bf9aff;
-    width: 125px;
-    color: white;
-    font-weight: 200px;
-    border-radius: 20px;
-    height: 28px;
-}
-
-
-.logInbtn{
-    margin-top: 5px;
-}
-
-.continue{
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    background-color: #bf9aff;
-    border-radius: 20px;
-    top: 40%;
-    left: 22%;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 10px;
-    margin: 10px;
-}
-
-.notFound{
-    visibility: hidden;
-}
-
-.register{
-    margin-top: 20px;
-    border: 0;
-}
-
-#newUser{
-
-    padding: 20px;
-    border-radius: 20px;
-    height: 40%;
-    width: 70%;
-    position: fixed;
-    top: 20%;
-    left: 15%;
-    background-color: #262627;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: space-around;
-}
-
-.newUserHide{
-visibility: hidden;
-}
-
-.loginOpacity{
-    opacity: 20%;
-}
-
-#newUser input{
-    width: 95%;
-}
-
-#newUser button{
-    background-color: #bf9aff;
-    width: 125px;
-    color: white;
-    font-weight: 200px;
-    border-radius: 20px;
-    height: 28px;
-   align-self: center;
-}
+/*********Rating colours**********/
 
 #front-end-rating {
     color: #FCC699;
