--- a/server/public/login.css
+++ b/server/public/login.css
@@ -29,7 +29,7 @@ header {
 header h1 {
     font-size: 3rem;
     margin-bottom: 0.5rem;
-    margin-top: 0px;
+    margin-top: 1rem;
 }
 
 
@@ -38,6 +38,7 @@ header h1 {
 #login main{
     margin-top: 5%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-width: 270px;
@@ -119,44 +120,48 @@ header h1 {
     border: none;
 }
 
-.notFound{
+.notFound {
     visibility: hidden;
 }
 
-.register{
+.register {
     margin-top: 0.5rem;
     border: 0;
 }
 
-#newUser{
+#newUser {
     padding: 20px;
     border-radius: 20px;
     height: 50%;
     width: 70%;
+    min-width: 300px;
+    max-width: 400px;
     position: fixed;
-    top: 20%;
-    left: 10%;
+    top: 50%; /* Adjusted from 10% */
+    left: 50%; /* Adjusted from 10% */
+    transform: translate(-50%, -50%); /* Centering trick */
     background-color: #262627;
     display: flex;
     flex-direction: column;
     gap: 10px;
-    justify-content: space-around;
+    justify-content: center; /* Center vertically */
+    align-items: center; /* Center horizontally */
 }
 
-.newUserHide{
+.newUserHide {
 visibility: hidden;
 }
 
-.loginOpacity{
+.loginOpacity {
     opacity: 20%;
 }
 
-#newUser input{
+#newUser input {
     width: 95%;
     border-radius: 8px;
 }
 
-#newUser button{
+#newUser button {
     background-color: #bf9aff;
     width: 125px;
     color: white;
@@ -165,4 +170,12 @@ visibility: hidden;
     height: 28px;
     align-self: center;
     border: none;
+}
+
+#newUser button:nth-of-type(1) {
+    margin-top: 20px;
+}
+
+#newUser button:nth-of-type(2) {
+    margin-top: 10px;
 }
