--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -8,11 +8,20 @@ body {
 nav {
     background-color: #121418;
     height: 100px;
+    padding-left: 2.2rem;
+    padding-right: 2.2rem;
+    display: flex;
+    justify-content: center;
+}
+
+#nav-icon-container {
+    background-color: #121418;
+    height: 100px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 2.2rem;
-    padding-right: 2.2rem;
+    max-width: 525px;
 }
 
 #logo {
